2015-12-03  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Lead-In CMI is useless in Nintendo discs.

2015-12-03  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Added support for Nintendo GOD and WOD.

2015-12-03  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Added decoding of XGD2 and XGD3 DMI.

2015-12-02  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  DVD-RAM recording type depends on sector. Removed from
	  media-info command.

2015-12-02  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Implemented decoding DVD-RAM Spare Area Information.

2015-12-02  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Implemented decoding DVD-RAM medium status.

2015-12-02  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Added DDS decoding.

2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  DCB was incorrectly being asked to HD DVD instead of DVD+.

2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Added decoding Lead-In CMI for DVD.

2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Added all existing Blu-ray decoders.

2015-12-01  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Added PFI decoding.

2015-11-30  Natalia Portillo  <claunia@claunia.com>

	* Commands/Benchmark.cs:
	  Corrected style.

	* Options.cs:
	* Commands/Checksum.cs:
	* DiscImageChef.csproj:
	  Disabled Fletcher as it is abnormally slow.

2015-11-30  Natalia Portillo  <claunia@claunia.com>

	* Main.cs:
	* Options.cs:
	* DiscImageChef.csproj:
	* Commands/Benchmark.cs:
	  Added 'benchmark' command to benchmark checksum and hashing
	  algorithms.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaInfo.cs:
	  Added a workaround for Nintendo GameCube and Wii discs.
	Added SCSI READ MEDIA SERIAL NUMBER support.
